fixed scrollbar color issue and thikness

--- a/src/index.css
+++ b/src/index.css
@@ -98,7 +98,7 @@ code {
 .scrollbar-minimal {
   scrollbar-width: thin;
   /* For Firefox */
-  scrollbar-color: #EEEEEE transparent;
+  scrollbar-color: #DADADA transparent;
   /* Thumb and track colors */
 }
 
